// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPositionStyles Ensure unnecessary position styles are not added 1`] = `
{
  "m": {
    "bottom": "3vw",
    "left": "4%",
    "position": "relative",
    "right": "2em",
    "top": "1px",
  },
  "s": {
    "bottom": "3vw",
    "left": "4%",
    "position": "relative",
    "right": "2em",
    "top": "1px",
  },
  "xs": {
    "bottom": "3vw",
    "left": "4%",
    "position": "relative",
    "right": "2em",
    "top": "1px",
  },
}
`;

exports[`getPositionStyles Ensure unnecessary position styles are not added 2`] = `
{
  "general": {
    "bottom": "3vw",
    "left": "4%",
    "position": "relative",
    "right": "2em",
    "top": "1px",
  },
  "l": {
    "bottom": "3vw",
    "left": "4%",
    "position": "relative",
    "right": "2em",
    "top": "1px",
  },
  "m": {
    "position": "inherit",
  },
  "s": {
    "position": "inherit",
  },
  "xl": {
    "bottom": "3vw",
    "left": "4%",
    "position": "relative",
    "right": "2em",
    "top": "1px",
  },
  "xs": {
    "position": "inherit",
  },
  "xxl": {
    "bottom": "3vw",
    "left": "4%",
    "position": "relative",
    "right": "2em",
    "top": "1px",
  },
}
`;

exports[`getPositionStyles Get a correct position styles 1`] = `
{
  "general": {
    "bottom": "3vw",
    "left": "4%",
    "position": "relative",
    "right": "2em",
    "top": "1px",
  },
  "l": {
    "bottom": "3vw",
    "left": "4%",
    "position": "absolute",
    "right": "2em",
    "top": "1px",
  },
  "m": {
    "bottom": "3vw",
    "left": "4%",
    "position": "relative",
    "right": "2em",
    "top": "1px",
  },
  "s": {
    "bottom": "3vw",
    "left": "4%",
    "position": "absolute",
    "right": "2em",
    "top": "1px",
  },
  "xl": {
    "bottom": "3vw",
    "left": "4%",
    "position": "relative",
    "right": "2em",
    "top": "1px",
  },
  "xs": {
    "bottom": "3vw",
    "left": "4%",
    "position": "relative",
    "right": "2em",
    "top": "1px",
  },
  "xxl": {
    "bottom": "3vw",
    "left": "4%",
    "position": "absolute",
    "right": "2em",
    "top": "1px",
  },
}
`;
